# remote_compilation_helper

./: .gitignore  AGENTS.md  AGENTS_INTRODUCTION.md  AGENT_FRIENDLINESS_REPORT.md  CHANGELOG.md  COMPREHENSIVE_ISSUES_AND_PROBLEMS_WITH_RCH_BASED_ON_COMPLETE_SESSION_HISTORY_ANALYSIS.md  Cargo.toml  GEMINI_INVESTIGATION_REPORT.md  Makefile  README.md  UPGRADE_LOG.md  claude-upgrade-progress.json  install.sh  manifest_index.sh  rust-toolchain.toml
rch/: Cargo.toml
rch-common/: Cargo.toml  build.rs
rch-common/benches/: classifier.rs  reliability_bench.rs  remediation_hotpath.rs  ui_bench.rs
rch-common/proptest-regressions/: proptest_tests.txt  ssh.txt
rch-common/src/: admission_recommendation.rs  admission_rejection.rs  admit_preflight.rs  artifact_cost.rs  artifact_pattern.rs  artifact_verify.rs  binary_hash.rs  bypass_record.rs  bypass_recovery.rs  capability_probe.rs  cargo_path_deps.rs  classifier_drift.rs  closure_explain.rs  dependency_closure_planner.rs  discovery.rs  disk_pressure_report.rs  disk_reclaim.rs  exec_misuse.rs  exec_policy.rs  exec_response.rs  fleet_diff.rs  fleet_provenance.rs  fleet_smoke_profile.rs  fleet_status.rs  force_resync.rs  hooks.rs  incident.rs  incident_ledger.rs  job_identity.rs  job_recovery.rs  lib.rs  log_retention.rs  logging.rs  mock.rs  mock_worker.rs  path_topology.rs  patterns.rs  patterns_security_test.rs  placement.rs  pooled_target_key.rs  (+28 more)
rch-common/src/api/: error.rs  mod.rs  response.rs  schema.rs
rch-common/src/config/: dotenv.rs  env.rs  mod.rs  profiles.rs  source.rs  validate.rs
rch-common/src/e2e/: fault_injection.rs  fixtures.rs  harness.rs  logging.rs  mod.rs  process_triage.rs  test_workers.rs  verification.rs
rch-common/src/errors/: catalog.rs  explain.rs  mod.rs  reliability.rs
rch-common/src/testing/: injection.rs  log.rs  mod.rs
rch-common/src/ui/: context.rs  error.rs  icons.rs  mod.rs  theme.rs
rch-common/tests/: admission_goldens_e2e.rs  artifact_retrieval_golden_e2e.rs  ci_test_tiers_e2e.rs  classify_exec_fuzz.rs  classify_proptest.rs  contract_drift_e2e.rs  cross_repo_path_deps_e2e.rs  cross_worker_parity_e2e.rs  dependency_closure_planner.rs  deterministic_replay_e2e.rs  docs_validation_e2e.rs  fault_injection_e2e.rs  feature_flags_rollout_e2e.rs  golden_schemas_e2e.rs  hook_socket_recovery_incident_e2e.rs  local_remote_parity_e2e.rs  performance_budget_e2e.rs  placement_golden_e2e.rs  process_triage_e2e.rs  proof_replay_conveyor_e2e.rs  redaction_leak_guard_e2e.rs  redaction_policy_golden_e2e.rs  redaction_retention_e2e.rs  release_gate_signoff_e2e.rs  reliability_coverage_matrix_e2e.rs  reliability_doctor_e2e.rs  remediation_config_golden_e2e.rs  remediation_hotpath_budget_e2e.rs  remediation_view_golden_e2e.rs  repo_convergence_e2e.rs  schema_contract_e2e.rs  slo_guardrails_e2e.rs  smoke.rs  soak_concurrency_e2e.rs  storm_control_e2e.rs  ux_regression_e2e.rs
rch-common/tests/goldens/: classification_non_build_arguments.json  selection_diagnostics_no_workers_passed_health.json
rch-telemetry/: Cargo.toml
rch-telemetry/src/: lib.rs  main.rs  metrics.rs  otlp.rs  protocol.rs  remediation.rs  speedscore.rs
rch-telemetry/src/benchmarks/: compilation.rs  disk.rs  error.rs  memory.rs  mod.rs  network.rs  retry.rs
rch-telemetry/src/collect/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
rch-telemetry/src/storage/: mod.rs
rch-telemetry/tests/: collect_cpu.rs  collect_disk.rs  collect_memory.rs  collect_network.rs  integration_pipeline.rs  mocks_test.rs  remediation_metrics_e2e.rs
rch-telemetry/tests/common/: mod.rs
rch-telemetry/tests/fixtures/: proc_diskstats_sample.txt  proc_meminfo_low.txt  proc_meminfo_sample.txt  proc_net_dev_sample.txt  proc_stat_busy.txt  proc_stat_sample.txt
rch-telemetry/tests/mocks/: mod.rs
rch-wkr/: Cargo.toml
rch-wkr/src/: cache.rs  executor.rs  main.rs  prepare.rs  toolchain.rs
rch/src/: cache.rs  cache_gc.rs  commands.rs  completions.rs  config.rs  doctor.rs  doctor_webhooks.rs  error.rs  hook.rs  hook_windows.rs  main.rs  self_healing_overrides.rs  status_display.rs  status_types.rs  toolchain.rs  transfer.rs  transfer_stub.rs
rch/src/agent/: detect.rs  hook.rs  mod.rs
rch/src/commands/: config.rs  config_doctor.rs  config_init.rs  daemon.rs  helpers.rs  hook.rs  init.rs  mod.rs  queue.rs  status.rs  sync.rs  types.rs  workers.rs  workers_deploy.rs  workers_init.rs  workers_setup.rs
rch/src/fleet/: audit.rs  doctor.rs  dry_run.rs  executor.rs  history.rs  lock.rs  mod.rs  plan.rs  preflight.rs  progress.rs  rollback.rs  ssh.rs
rch/src/hook/: artifact_patterns.rs  auto_start.rs  cargo_target_dir.rs  command_parsing.rs  daemon_ipc.rs  dependency_closure.rs  formatting.rs  progress_reporting.rs  remote_result.rs  repo_updater.rs  selection_response.rs  ssh.rs  tests.rs  timing_history.rs  transfer_orchestration.rs
rch/src/state/: exit_codes.rs  lock.rs  mod.rs  primitives.rs
rch/src/tui/: app.rs  event.rs  mod.rs  state.rs  status.rs  test_data.rs  test_harness.rs  widgets.rs
rch/src/ui/: adaptive.rs  benchmark.rs  config.rs  console.rs  context.rs  markdown.rs  mod.rs  probe.rs  progress.rs  status.rs  style.rs  styled.rs  test_utils.rs  workers.rs  writer.rs
rch/src/update/: check.rs  download.rs  install.rs  (+4 more)
rch/tests/: audit_e2e.rs  compile_context.rs  e2e_fleet.rs  e2e_hook.rs  hook_fail_open.rs  hook_integration.rs  integration_suite.rs  stream_isolation.rs  verbose_flag_integration.rs
rchd/: Cargo.toml
rchd/src/: admission.rs  alerts.rs  api.rs  benchmark_queue.rs  benchmark_scheduler.rs  build_root_policy.rs  bypass_recovery_service.rs  cache_cleanup.rs  cancellation.rs  cleanup.rs  config.rs  disk_full_prevention_tests.rs  disk_pressure.rs  events.rs  headroom.rs  health.rs  history.rs  http_api.rs  main.rs  process_triage.rs  reclaim.rs  reliability.rs  reload.rs  repo_convergence.rs  selection.rs  self_test.rs  stale_target_reap.rs  startup_consistency.rs  telemetry.rs  workers.rs
rchd/tests/: daemon_lifecycle.rs  e2e_daemon.rs  e2e_multi_worker.rs  e2e_pipeline.rs  e2e_self_test.rs  e2e_worker.rs  stability.rs
(+300 files in other folders)
