[package]
name = "rch-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and utilities for Remote Compilation Helper"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
