[package]
name = "rch-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and utilities for Remote Compilation Helper"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
openssh = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
shellexpand = "3.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "classifier"
harness = false

[lints.rust]
unsafe_code = "forbid"
