[package]
name = "rch-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telemetry collection for Remote Compilation Helper workers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = "3.19"
tokio = { workspace = true }
fastrand = "2.3"
shellexpand = "3.1"
rch-common = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lints.rust]
unsafe_code = "deny"
