[package]
name = "rch-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telemetry collection for Remote Compilation Helper workers"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tempfile = "3.25.0"
tokio = { workspace = true }
fastrand = "2.4.1"
shellexpand = "3.1.1"
rch-common = { workspace = true }
prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
# `grpc-tonic` enables the OTLP/gRPC transport (`with_tonic`); the bead targets
# OTLP gRPC export. Member-level features are additive to the workspace set.
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }

[features]
default = ["storage"]
storage = ["dep:rusqlite"]

[dev-dependencies]
proptest = "1.11.0"
# In-memory metric exporter for deterministic OTLP-instrument tests (no network).
opentelemetry_sdk = { workspace = true, features = ["testing"] }

[lints.rust]
unsafe_code = "deny"
