[package]
name = "rch-wkr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Compilation Helper - Worker agent for remote execution"

[[bin]]
name = "rch-wkr"
path = "src/main.rs"

[dependencies]
rch-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
schemars = { workspace = true }
rch-telemetry = { path = "../rch-telemetry", default-features = false }

[dev-dependencies]
ctor = { workspace = true }
tempfile = "3.25.0"

[lints.rust]
unsafe_code = "forbid"
