[package]
name = "rch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Compilation Helper - PreToolUse hook CLI"

[[bin]]
name = "rch"
path = "src/main.rs"

[dependencies]
rch-common = { workspace = true }
rch-telemetry = { path = "../rch-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
toon-rust = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
blake3 = { workspace = true }
shellexpand = "3.1"
dirs = { workspace = true }
urlencoding = "2"
colored = "3"
unicode-width = { workspace = true }
is-terminal = "0.4"
terminal_size = "0.4"
regex = "1"
indicatif = { version = "0.18", features = ["tokio"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

# Update system dependencies
reqwest = { version = "0.13", features = ["json"] }
sha2 = "0.10"
shell-escape = "0.1.5"

# State detection dependencies
which = "8"

# Markdown rendering
pulldown-cmark = { workspace = true }

# Rich terminal output (optional)
rich_rust = { workspace = true, optional = true }

# TUI (Terminal User Interface)
ratatui = { workspace = true }
crossterm = { workspace = true }

# Interactive CLI prompts
dialoguer = { workspace = true }
console = { workspace = true }

[features]
default = ["rich-ui"]
rich-ui = ["rich_rust"]

[dev-dependencies]
tempfile = "3"
proptest = "1.4"

[lints.rust]
unsafe_code = "forbid"
