[package]
name = "rchd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Compilation Helper - Local daemon for worker orchestration"

[[bin]]
name = "rchd"
path = "src/main.rs"

[dependencies]
rch-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
openssh = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
